llama.cpp working fast (12 tokens per second) with Llama 3 70B IQ2_XS.gguf

--- a/projects/exllama/exllama.ipynb
+++ b/projects/exllama/exllama.ipynb
@@ -1,44 +1,103 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:47:37.826790Z",
+     "start_time": "2024-05-06T14:47:33.753140Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip install huggingface-cli",
+   "id": "a7cee7a296448ca1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting huggingface-cli\n",
+      "  Downloading huggingface_cli-0.1-py3-none-any.whl.metadata (117 bytes)\n",
+      "Downloading huggingface_cli-0.1-py3-none-any.whl (1.0 kB)\n",
+      "Installing collected packages: huggingface-cli\n",
+      "Successfully installed huggingface-cli-0.1\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-06T14:59:33.472089Z",
+     "start_time": "2024-05-06T14:59:32.422736Z"
+    }
+   },
+   "cell_type": "code",
+   "source": " !huggingface-cli login --token {your token}",
+   "id": "830146445883fcb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+      "Token is valid (permission: read).\n",
+      "Your token has been saved to C:\\Users\\jason\\.cache\\huggingface\\token\n",
+      "Login successful\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-05-06T19:03:56.751132Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# !huggingface-cli download turboderp/Mistral-7B-instruct-exl2 --revision 4.0bpw --local-dir C:\\shared-drive\\llm_models\n",
+    "# !huggingface-cli download meta-llama/Meta-Llama-3-70B-Instruct --local-dir C:\\shared-drive\\llm_models\\llama-3-70B #BAD use exl2 format\n",
+    "!huggingface-cli download crusoeai/dolphin2.9-llama3-70b-2.25bpw-exl2 --local-dir C:\\shared-drive\\llm_models\\crusoeai/dolphin2.9-llama3-70b-2.25bpw-exl2"
+   ],
+   "id": "a87356ac1cd89278",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-06T14:00:29.563967Z",
-     "start_time": "2024-05-06T14:00:29.553020Z"
+     "end_time": "2024-05-06T21:54:57.319693Z",
+     "start_time": "2024-05-06T21:53:49.592965Z"
     }
    },
-   "source": "5+5",
+   "source": [
+    "%cd C:\\shared-drive\\dev\\python-playground\\projects\\exllama\\exllamav2\n",
+    "!dir\n",
+    "# !python examples/chat.py -m C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q3_K_M.gguf -mode llama -pt -ncf -ngram\n",
+    "# !python examples/chat.py -m C:\\shared-drive\\llm_models\\dolphin2.9-llama3-70b-4.5bpw-exl2 -mode llama -pt -ncf -ngram\n",
+    "!python examples/chat.py -m C:\\shared-drive\\llm_models\\crusoeai\\dolphin2.9-llama3-70b-2.25bpw-exl2 -mode llama -pt -ncf -ngram"
+   ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T14:01:23.331033Z",
-     "start_time": "2024-05-06T14:01:23.299666Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "%cd \n",
-    "!dir"
-   ],
-   "id": "60982b57aa82be59",
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\shared-drive\\dev\\python-playground\\projects\\exllama\\exllamav2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jason\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -46,39 +105,31 @@
       " Volume in drive C has no label.\n",
       " Volume Serial Number is B622-4C9D\n",
       "\n",
-      " Directory of C:\\Users\\jason\n",
+      " Directory of C:\\shared-drive\\dev\\python-playground\\projects\\exllama\\exllamav2\n",
       "\n",
-      "05/05/2024  05:02 PM    <DIR>          .\n",
-      "05/05/2024  05:02 PM    <DIR>          ..\n",
-      "05/05/2024  09:24 AM    <DIR>          .conda\n",
-      "05/05/2024  09:15 AM                42 .condarc\n",
-      "05/04/2024  02:37 PM    <DIR>          .dotnet\n",
-      "05/05/2024  12:36 PM    <DIR>          .insomniac\n",
-      "05/05/2024  09:12 AM    <DIR>          .ipynb_checkpoints\n",
-      "05/04/2024  03:55 PM    <DIR>          .ipython\n",
-      "05/05/2024  09:36 AM    <DIR>          .jupyter\n",
-      "11/13/2023  04:11 PM    <DIR>          .pycharm_helpers\n",
-      "05/04/2024  03:35 PM    <DIR>          3D Objects\n",
-      "05/05/2024  02:22 PM    <DIR>          ai_overlay_tmp\n",
-      "05/05/2024  06:43 AM    <DIR>          ansel\n",
-      "05/04/2024  03:35 PM    <DIR>          Contacts\n",
-      "05/05/2024  03:09 PM    <DIR>          Desktop\n",
-      "05/05/2024  12:35 PM    <DIR>          Documents\n",
-      "05/05/2024  07:27 PM    <DIR>          Downloads\n",
-      "05/04/2024  03:35 PM    <DIR>          Favorites\n",
-      "05/04/2024  03:35 PM    <DIR>          Links\n",
-      "05/04/2024  03:35 PM    <DIR>          Music\n",
-      "05/04/2024  07:31 PM    <DIR>          OneDrive\n",
-      "05/04/2024  03:35 PM    <DIR>          Pictures\n",
-      "05/04/2024  03:35 PM    <DIR>          Saved Games\n",
-      "05/04/2024  03:35 PM    <DIR>          Searches\n",
-      "05/05/2024  07:00 AM    <DIR>          source\n",
-      "05/04/2024  07:24 PM    <DIR>          test\n",
-      "05/05/2024  09:13 AM             4,666 Untitled.ipynb\n",
-      "05/05/2024  09:14 AM             1,000 Untitled1.ipynb\n",
-      "05/06/2024  06:46 AM    <DIR>          Videos\n",
-      "               3 File(s)          5,708 bytes\n",
-      "              26 Dir(s)  1,712,823,140,352 bytes free\n"
+      "05/06/2024  07:03 AM    <DIR>          .\n",
+      "05/06/2024  07:03 AM    <DIR>          ..\n",
+      "05/06/2024  07:02 AM    <DIR>          .github\n",
+      "05/06/2024  07:02 AM               127 .gitignore\n",
+      "05/06/2024  07:07 AM    <DIR>          build\n",
+      "05/06/2024  07:02 AM    <DIR>          conversion\n",
+      "05/06/2024  07:02 AM            10,284 convert.py\n",
+      "05/06/2024  07:02 AM    <DIR>          doc\n",
+      "05/06/2024  07:39 AM    <DIR>          examples\n",
+      "05/06/2024  07:02 AM    <DIR>          exllamav2\n",
+      "05/06/2024  07:03 AM    <DIR>          exllamav2.egg-info\n",
+      "05/06/2024  07:02 AM             1,053 LICENSE\n",
+      "05/06/2024  07:02 AM                73 MANIFEST.in\n",
+      "05/06/2024  07:02 AM             8,261 model_diff.py\n",
+      "05/06/2024  07:02 AM             7,551 README.md\n",
+      "05/06/2024  07:02 AM               150 requirements.txt\n",
+      "05/06/2024  07:02 AM             4,688 setup.py\n",
+      "05/06/2024  07:02 AM    <DIR>          tests\n",
+      "05/06/2024  07:02 AM            19,871 test_inference.py\n",
+      "05/06/2024  07:02 AM    <DIR>          util\n",
+      "               9 File(s)         52,058 bytes\n",
+      "              11 Dir(s)  1,360,186,486,784 bytes free\n",
+      "^C\n"
      ]
     }
    ],
