--- a/projects/llamacpp/llama cpp - llama 3 8B 32k.ipynb
+++ b/projects/llamacpp/llama cpp - llama 3 8B 32k.ipynb
@@ -13,16 +13,25 @@
    }
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
+  },
+  {
    "cell_type": "code",
    "source": [
     "from llama_cpp import Llama\n",
-    "max_tokens = 4000\n",
+    "max_tokens = 4096\n",
     "# llama_llm = Llama(model_path=\"/Volumes/4Tera_SSD_2022/llm_models/llama-2-7b-chat.Q5_K_M.gguf\", chat_format=\"llama-2\")\n",
     "# model_file_path = \"/Users/jmcaffee/llm_models/Llama-3-8B-Instruct-32k-v0.1.Q4_K_M.gguf\"\n",
-    "# model_file_path = \"C:\\shared-drive\\llm_models\\Llama-3-8B-Instruct-32k-v0.1.Q4_K_M.gguf\"\n",
+    "model_file_path = \"C:\\shared-drive\\llm_models\\Llama-3-8B-Instruct-32k-v0.1.Q4_K_M.gguf\" #extremely fast on 3090\n",
     "# model_file_path = \"C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q5_K_M.gguf\" #wont load on rtx 3090\n",
-    "model_file_path = \"C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q3_K_M.gguf\"\n",
-    "llm = Llama(model_path=model_file_path, chat_format=\"llama-3\", n_ctx=max_tokens,  n_gpu_layers=-1)\n",
+    "# model_file_path = \"C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q3_K_M.gguf\" # this doesn't seem to work with python wrapper, but does if you run it via server.exe of llama.cpp\n",
+    "# model_file_path = \"C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.IQ2_XS.gguf\" #doesn't respond at all on 3090\n",
+    "# allegedly iq2_xs.gguf will get 12 tokens/second on 3090: https://www.reddit.com/r/LocalLLaMA/comments/1caofxm/quick_speed_benchmark_for_llama_3_70b_on_1x_3090/\n",
+    "llm = Llama(model_path=model_file_path, chat_format=\"llama-3\", n_ctx=max_tokens,  n_gpu_layers=81)\n",
     "# llm.verbose = False # don't print a bunch of stuff\n",
     "\n",
     "n_ubatch=32\n",
@@ -36,8 +45,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-05-06T01:41:51.799875Z",
-     "start_time": "2024-05-06T01:40:01.624254Z"
+     "end_time": "2024-05-06T22:55:38.878403Z",
+     "start_time": "2024-05-06T22:53:33.867280Z"
     }
    },
    "outputs": [
@@ -47,7 +56,7 @@
      "text": [
       "<>:7: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:7: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\jason\\AppData\\Local\\Temp\\ipykernel_12444\\3069559169.py:7: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\jason\\AppData\\Local\\Temp\\ipykernel_17052\\3079669974.py:7: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  model_file_path = \"C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q3_K_M.gguf\"\n",
       "llama_model_loader: loaded meta data with 22 key-value pairs and 723 tensors from C:\\shared-drive\\llm_models\\Meta-Llama-3-70B-Instruct.Q3_K_M.gguf (version GGUF V3 (latest))\n",
       "llama_model_loader: Dumping metadata keys/values. Note: KV overrides do not apply in this output.\n",
@@ -233,8 +242,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-05-06T01:42:22.823104Z",
-     "start_time": "2024-05-06T01:42:22.813550Z"
+     "end_time": "2024-05-06T22:57:30.507752Z",
+     "start_time": "2024-05-06T22:57:30.494013Z"
     }
    },
    "outputs": [],
@@ -249,29 +258,11 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2024-05-06T01:42:50.009180Z",
-     "start_time": "2024-05-06T01:42:26.371645Z"
+     "start_time": "2024-05-06T22:57:37.976555Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Paris, the capital and most populous city of France, is located in Western"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
