--- a/projects/llamafile/llama 3.ipynb
+++ b/projects/llamafile/llama 3.ipynb
@@ -19,10 +19,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-05-06T14:22:04.155185Z",
      "start_time": "2024-05-06T14:10:13.030303Z"
     }
    },
@@ -68,11 +66,12 @@
       "05/05/2024  07:24 PM    39,994,659,426 Meta-Llama-3-70B-Instruct.Q4_0.llamafile.exe\n",
       "05/04/2024  04:19 PM    49,950,329,280 Meta-Llama-3-70B-Instruct.Q5_K_M.gguf\n",
       "               5 File(s) 129,161,833,683 bytes\n",
-      "               2 Dir(s)  1,711,701,446,656 bytes free\n"
+      "               2 Dir(s)  1,711,701,446,656 bytes free\n",
+      "^C\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
