llama client working with llama cpp

--- a/projects/llamafile/llama 3 client.ipynb
+++ b/projects/llamafile/llama 3 client.ipynb
@@ -125,7 +125,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "import openai\n",
     "\n",
@@ -168,13 +167,13 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-02T10:34:29.254359Z",
-     "start_time": "2024-05-02T10:34:29.243332Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "id": "e6fc39c54c56c17f",
-   "execution_count": 18
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
