--- a/projects/llamacpp/llama cpp - llama 3 8B 32k.ipynb
+++ b/projects/llamacpp/llama cpp - llama 3 8B 32k.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": ""
+   "source": []
   },
   {
    "cell_type": "code",
@@ -251,7 +251,9 @@
   },
   {
    "cell_type": "code",
-   "source": "stream_prompt(\"Where is paris?\")",
+   "source": [
+    "stream_prompt(\"Where is paris?\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
