slack bot now running with deepseek r1
slack bot now running with deepseek r1

slack bot now running with deepseek r1

--- a/projects/vision/uform-gen.ipynb
+++ b/projects/vision/uform-gen.ipynb
@@ -411,12 +411,70 @@
    "execution_count": 36
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-30T00:24:45.210362Z",
+     "start_time": "2024-05-30T00:24:35.653195Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "prompt = '''You are an expert in providing in depth analysis of images. \n",
+    "You provide nuanced details of the subjects, objects, lighting, colors, actions, time, place, feeling, smells, and other details. i.e. You should provide details on who, what, why, when, where.\n",
+    "Please provide an in depth analysis of the image.\n",
+    "'''\n",
+    "analyze_image_stream(\"C:\\\\shared-drive\\\\llm_models\\\\ComfyUI_windows_portable\\\\ComfyUI\\\\output\\\\ComfyUI_00192_.png\", prompt)"
+   ],
+   "id": "e91613d40b5d56d3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image captures a young woman standing in a park. The woman is the central figure, occupying a significant portion of the image. She is dressed in a green top and a white skirt, both of which are part of a pair. The top is a bright green, and the skirt is a contrasting white. The woman's hair is long and dark, and she is wearing a necklace around her neck. Her face is turned towards the camera, giving a direct gaze. Her left hand is on her hip, and her right hand is in her pocket.\n",
+      "The park is lush and green, with trees scattered around. The trees are tall and leafy, and their trunks are visible. The ground is covered in grass, and there are patches of dirt visible as well. The woman is standing on a path that is surrounded by the trees. The path is well-maintained, and it seems to be a quiet and peaceful area.\n",
+      "The lighting in the image is bright and natural, with sunlight filtering through the trees. The sunlight illuminates the woman's face and the background, creating a warm and inviting atmosphere. The colors in the image are vibrant and natural, with the green of the top and skirt, the white of the skirt, and the green of the grass and trees. The woman's outfit is also quite eye-catching, with the green top and white skirt standing out against the green grass and the white skirt.\n",
+      "Overall, the image captures a serene moment in a park, with the woman as the central figure, dressed in a stylish outfit, and surrounded by nature. The bright sunlight and natural colors create a beautiful and inviting atmosphere.<|im_end|>"
+     ]
+    }
+   ],
+   "execution_count": 54
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-31T01:34:03.693548Z",
+     "start_time": "2024-05-31T01:33:59.858262Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "prompt = '''\n",
+    "You are an expert in providing in depth analysis of images. \n",
+    "You provide nuanced details of the subjects, objects, lighting, colors, actions, time, place, feeling, smells, and other details. i.e. You should provide details on who, what, why, when, where.\n",
+    "Please provide an in depth analysis of the image.\n",
+    "'''\n",
+    "analyze_image_stream(\"Drivers_ License_1.jpg\", prompt)"
+   ],
+   "id": "54b58bed18ef03bb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image is a 2012 Pennsylvania State University football credit card. The card is in a light blue color and features a photo of a young man, who is smiling. The man is wearing a green shirt and has short brown hair. The card has the university's logo and the date \"09/01/2012\" written on it. The card also has the university's phone number and the university's website address. The card is in good condition and is clearly labeled with the credit card number, university name, and date of issuance.<|im_end|>"
+     ]
+    }
+   ],
+   "execution_count": 64
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "e91613d40b5d56d3"
+   "id": "e1d66d31a0f7ff58"
   }
  ],
  "metadata": {
