--- a/projects/slack/run ai bot.ipynb
+++ b/projects/slack/run ai bot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2025-01-24T18:46:26.295995Z"
+     "start_time": "2025-01-24T19:16:38.897231Z"
     }
    },
    "source": [
@@ -19,14 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "main\n",
-      "slack token is:  xoxb-504747840452-6362514126177-QkIVV3ycXjz0L273u2rxyVPl\n",
-      "asking chatgpt: what is the capital of france?\n",
-      "<think>\n",
-      "Okay, I need to figure out the capital of France. I remember from school that Paris is a major city in France, but I'm not 100% sure if it's the capital. Let me think about other capitals I know. London is the capital of the UK, Berlin for Germany, Madrid for Spain. So, moving down to France, yeah, Paris does ring a bell as the capital. I think it's where a lot of important government buildings are located, like the Eiffel Tower and the Louvre Museum. Also, I've heard the government and the president are based there. So, yeah, Paris must be the capital of France.\n",
-      "</think>\n",
-      "\n",
-      "The capital of France is Paris.Noneanswer received in 8.949700117111206 seconds.\n"
+      "main\n"
      ]
     }
    ],
