fix issue with AI bot responses being too long, by using text blocks with slack.

--- a/projects/slack/run ai bot.ipynb
+++ b/projects/slack/run ai bot.ipynb
@@ -5,8 +5,9 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2025-01-24T19:16:38.897231Z"
+     "start_time": "2025-01-24T20:06:17.401010Z"
     }
    },
    "source": [
@@ -19,7 +20,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "main\n"
+      "main\n",
+      "asking chatgpt: what is a cat?\n",
+      "<think>\n",
+      "Okay, so I'm"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/slack_sdk/web/internal_utils.py:290: UserWarning: The top-level `text` argument is missing in the request payload for a chat.update call - It's a best practice to always provide a `text` argument when posting a message. The `text` argument is used in places where content cannot be rendered such as: system push notifications, assistive technology such as screen readers, etc.\n",
+      "  warnings.warn(missing_text_message, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " trying to figure out what a cat is. I know cats are animals, but I want to understand more about them. Let me start by thinking about what I know.\n",
+      "Cats are often kept as pets, right? They're called domestic cats. But there are also wild cats, like lions and tigers, which are bigger and live in different environments. So, maybe I should consider both domestic and wild cats.\n",
+      "\n",
+      "Domestic cats are small, furry animals. They have four legs, a tail, and they purr. I remember that purring is a sound they make when they're happy or comfortable. They also have whiskers and sharp claws. I think they use their claws for climbing and hunting.\n",
+      "\n",
+      "Cats are carnivores, which means they eat meat. They hunt small prey like mice and birds. That's why they have sharp teeth and strong jaw muscles. I've also heard that cats are good at jumping and climbing trees, which makes sense because they need to escape predators or catch prey.\n",
+      "\n",
+      "Behavior-wise, cats are independent but can form strong bonds with humans. They like to play and can be very affectionate. Some people say that cats have a certain aloofness, meaning they don't always seek attention like dogs might.\n",
+      "\n",
+      "Physically, cats have a specific body structure. Their fur can come in various colors and patterns, like calico or tabby. They have a low center of gravity, which helps them be agile. Their eyes are positioned to give them a wide field of vision, which is useful for hunting.\n",
+      "\n",
+      "I should also consider the scientific classification. Cats belong to the Felidae family, which includes all the big cats like lions and tigers. The domestic cat is Felis catus. They evolved from wild ancestors, and humans started domesticating them around 9,000 years ago, possibly for controlling pests like mice.\n",
+      "\n",
+      "Cats have a unique way of communication. They meow to talk to humans, but they also use body language and scent marking. Rubbing their face on objects or people is a way to mark territory. They also hiss or spit when they feel threatened.\n",
+      "\n",
+      "Health-wise, cats have some interesting traits. They can't taste sweetness because they lack certain taste buds. They have a high metabolism, which is why they need to eat frequently. They also have a ninth lives saying, meaning they're resilient and can recover from injuries better than other animals.\n",
+      "\n",
+      "In terms of their ecological role, cats, especially domestic ones, can have both positive and negative impacts. They help control rodent populations, which is beneficial, but they can also hunt birds and other wildlife, which might be harmful in certain environments.\n",
+      "\n",
+      "Cultural significance is another aspect. Cats have been featured in mythology, literature, and art across many cultures. They're often seen as mysterious and sometimes as companions to other beings, like in the story of the Cheshire Cat in Alice in Wonderland.\n",
+      "\n",
+      "I should also think about their behavior towards humans. Cats are often seen as low-maintenance pets because they don't require as much attention as"
      ]
     }
    ],
